--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon .",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+		"test:e2e": "jest --detectOpenHandles --config ./tests/jest-e2e.json"
+	},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,11 +19,13 @@
     "express-validator": "^6.14.0",
     "formidable": "^2.0.1",
     "gravatar": "^1.8.2",
+    "jest": "^29.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
-    "stripe": "^8.202.0"
+    "stripe": "^8.202.0",
+    "supertest": "^6.3.3"
   }
 }
